[gd_scene load_steps=8 format=3 uid="uid://cdg82mh4ljjty"]

[ext_resource type="Texture2D" uid="uid://bqjwrbgnbf5tn" path="res://icon.svg" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://b3aay1msyt83" path="res://scripts/player.gd" id="1_g2els"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vyb7"]
size = Vector2(15.5, 15.5)

[sub_resource type="Gradient" id="Gradient_g2els"]
offsets = PackedFloat32Array(0.26666668, 1)
colors = PackedColorArray(0.74509805, 0, 0, 1, 10.299823, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qhqgy"]
gradient = SubResource("Gradient_g2els")
width = 8
height = 8
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CurveTexture" id="CurveTexture_g2els"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g2els"]
lifetime_randomness = 0.25
particle_flag_disable_z = true
angle_min = -347.3
angle_max = 59.30001
spread = 180.0
initial_velocity_max = 394.12
gravity = Vector3(0, 0, 0)
linear_accel_min = -20.000002
linear_accel_max = 17.649998
radial_accel_min = -2.2351742e-06
radial_accel_max = 38.819996
tangential_accel_min = -34.120003
tangential_accel_max = 27.059998
color = Color(1, 0, 0, 1)
alpha_curve = SubResource("CurveTexture_g2els")

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_g2els")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3vyb7")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="DeathParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
texture = SubResource("GradientTexture2D_qhqgy")
lifetime = 0.1
one_shot = true
randomness = 0.23
process_material = SubResource("ParticleProcessMaterial_g2els")

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="finished" from="DeathParticles" to="." method="_on_death_particles_finished"]
